k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diabetes-care-service
spec:
  selector:
    app: diabetes-care
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1012
  type: LoadBalancer
